--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,4 +62,14 @@
         app:layout_constraintTop_toBottomOf="@+id/login_editText_password"
         tools:text="@string/login_button_enter" />
 
+    <Button
+        android:id="@+id/login_button_singUp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/login_button_singUp"
+        app:layout_constraintEnd_toEndOf="@+id/login_button_enter"
+        app:layout_constraintStart_toStartOf="@+id/login_button_enter"
+        app:layout_constraintTop_toBottomOf="@+id/login_button_enter" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
