--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,12 +53,12 @@
 
     <Button
         android:id="@+id/login_button_enter"
-        android:layout_width="150dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="@string/login_button_enter"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/login_editText_password"
+        app:layout_constraintStart_toStartOf="@+id/login_editText_password"
         app:layout_constraintTop_toBottomOf="@+id/login_editText_password"
         tools:text="@string/login_button_enter" />
 
